# clawshield

./: .env.example  .gitignore  README.md  pyproject.toml
policies/base/: dangerous_exec.json  intent_action_mismatch.json  memory_context_poisoning.json  sensitive_data_access.json  sensitive_data_exfiltration.json  tool_result_injection.json  unsafe_file_write.json
src/clawshield/: __init__.py  config.py  utils.py
src/clawshield/adapter_openclaw/: __init__.py  bootstrap.py  plugin.py
src/clawshield/bridge/: __init__.py  openclaw.py
src/clawshield/cli/: main.py
src/clawshield/core/: __init__.py  decision.py  deterministic.py  engine.py  session_state.py
src/clawshield/event_schema/: __init__.py  models.py
src/clawshield/incidents/: __init__.py  logger.py
src/clawshield/judge/: __init__.py  client.py
src/clawshield/policy/: __init__.py  loader.py  schema.py
src/clawshield/retrieval/: __init__.py  engine.py
src/clawshield/wrappers/: __init__.py  file_write.py  shell.py  web_fetch.py
tests/: test_core.py
