[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clawshield"
version = "0.1.0"
description = "Minimal safety core, wrappers, and adapter for OpenClaw-style agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Open Source Contributors" }
]
dependencies = []

[project.scripts]
clawshield = "clawshield.cli.main:main"
clawshield-openclaw-bridge = "clawshield.bridge.openclaw:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
